--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -7,7 +7,7 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <meta name="description" content="">
         <meta name="author" content="">
-        <title> {% block title %} Simpléduc - Gestion des projets {% endblock %}</title>
+        <title> {% block title %} Simpléduc {% endblock %}</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link rel="icon" type="image/png" href="favicon.ico" />
