--- a/src/vue/developpeur/developpeur-ajout.html.twig
+++ b/src/vue/developpeur/developpeur-ajout.html.twig
@@ -1,27 +1,19 @@
 {% extends "base.html.twig" %}
 {% block style %}<link href="css/style-signin.css" rel="stylesheet"> {% endblock %}
-{% block title %} {{ parent() }} Accueil - S'inscrire {% endblock %}
+{% block title %} {{ parent() }} - Ajouter un développeur {% endblock %}
        
 {% block contenu %} 
 
 {% if form.valide is defined %} 
     {% if form.valide == true %}
-       <h1 class="h3 mb-3 font-weight-normal">Inscription réussie</h1>
-       <h1 class="h3 mb-3 font-weight-normal">Voici votre identifiant : {{form.email}}</h1>
-       {% if form.role == 1 %}
-           <h1 class="h3 mb-3 font-weight-normal">Vous êtes administrateur du site</h1>
-       {% else %}
-           <h1 class="h3 mb-3 font-weight-normal">Vous êtes un utilisateur du site </h1>
-       {% endif %}    
-       <h1 class="h3 mb-3 font-weight-normal"><a href="index.php">Connectez-vous</a></h1>
+       <h1 class="alert alert-success" role="alert">Ajout réussie</h1>
+       <h1 class="h3 mb-3 font-weight-normal"><a href="index.php?page=developpeur" class="violet">Retourner sur la liste des développeurs</a></h1>
     {% else %} 
-       <h1 class="h3 mb-3 font-weight-normal">Echec de l'inscription</h1> 
-   <h1 class="alert alert-danger" role="alert">{{ form.message }}</h1> 
-       <h1 class="h3 mb-3 font-weight-normal"><a href="index.php?page=inscrire">Retourner sur la page d'inscription</a></h1>
+       <h1 class="h3 mb-3 font-weight-normal">{{ form.valide.message }}</h1> 
+       <h1 class="h3 mb-3 font-weight-normal"><a href="index.php?page=developpeur" class="violet">Retourner sur la liste des développeurs</a></h1>
     {% endif %}     
-       
-{% else %}  
- <form class="form-signin" action="index.php?page=inscrire" method="post" enctype="application/x-www-form-urlencoded">
+{% else %}   
+ <form class="form-signin" action="index.php?page=developpeurAdd" method="post" enctype="application/x-www-form-urlencoded">
       <h1 class="h3 mb-3 font-weight-normal">Ajouter un développeur</h1>
       <label for="inputEmail" class="sr-only">Email:</label>
       <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email" required autofocus>
@@ -39,7 +31,12 @@
       <label for="adresse" class="sr-only">Adresse:</label>
       <input type="adresse" id="telephone" name="adresse" class="form-control" placeholder="Adresse" required>
       <input type="file" name="photo" id="photo" class="form-control">
-      <button class="btn btn-lg  btn-block" type="submit" name="btInscrire">S'inscrire</button>
+      <ul class='form-control'>
+          {% for o in form.outil %}
+              <li class='list-unstyled col-10'>{{o.libelle}} Version : {{o.version}}<input type='checkbox' name='outil[]' value='{{o.code}}'></li>
+          {% endfor %}
+      </ul>
+      <button class="btn btn-lg  btn-block" type="submit" name="btAjouter">Ajouter</button>
      
  </form>
    
