--- a/src/vue/base.html.twig
+++ b/src/vue/base.html.twig
@@ -39,8 +39,7 @@
                  <ul class="dropdown-menu">
                      <li>Développeurs</li>
                      <li><a class="dropdown-item" href="index.php?page=developpeur">Gestion des développeurs</a></li>
-                     <li><a class="dropdown-item" href="index.php?page=developpeur">Tâches d'un projet pour un développeur</a></li>
-                     <li><a class="dropdown-item" href="index.php?page=developpeur">Tâches d'un développeur</a></li>
+                     <li><a class="dropdown-item" href="index.php?page=tachepardev">Tâches d'un projet pour un développeur</a></li>
                      <li role="separator" class="divider"></li>
                      <li>Outils</li>
                      <li><a class="dropdown-item" href="index.php?page=outil">Gestion des outils</a></li>
