--- a/src/vue/developpeur/developpeur-ajout.html.twig
+++ b/src/vue/developpeur/developpeur-ajout.html.twig
@@ -13,7 +13,7 @@
        <h1 class="h3 mb-3 font-weight-normal"><a href="index.php?page=developpeur" class="violet">Retourner sur la liste des développeurs</a></h1>
     {% endif %}     
 {% else %}   
- <form class="form-signin" action="index.php?page=developpeurAdd" method="post" enctype="application/x-www-form-urlencoded">
+ <form class="form-signin" action="index.php?page=developpeurAdd" method="post" enctype="multipart/form-data">
       <h1 class="h3 mb-3 font-weight-normal">Ajouter un développeur</h1>
       <label for="inputEmail" class="sr-only">Email:</label>
       <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email" required autofocus>
